patch()fix issue where screen width banners at the bottom of pages leave a strange gap

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_contentBlock.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_contentBlock.scss
@@ -43,11 +43,16 @@
         margin-bottom: 2em;
     }
 
+    &--screen {
+        &:last-child {
+            margin-bottom: 0em;
+        }
+    }
+
     .navcard {
         padding-bottom: 0px;
-
         margin-bottom: 0px;
-        
+
         @media #{$mobile} {
             margin-bottom: 2em;
 
